--- a/index.html
+++ b/index.html
@@ -14,91 +14,12 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="header-container">
-            <img class="logo" src="logo.png" alt="">
-            <!-- <h1>Abby's Apron</h1> -->
+    <div class="center">
+        <div class="center-box">
+            <img src="logo.png" alt="">
+            <h6 class="subtitle">Launching soon</h6>
         </div>
-    </div>
-
-    <div class="container">
-        <div class="sidebar">
-            <a href="#charcuterie">Charcuterie</a>
-            <a href="#gazpacho">Gazpacho</a>
-            <a href="#cod">Salt Cod Sandwiches</a>
-            <a href="#">Recipe</a>
-        </div>
-
-        <div class="content">
-            <div class="recipe-container" id="charcuterie">
-                <h3 class="recipe-name">Meat and Cheese Board</h3>
-                <div class="recipe-ingredients">
-                    <h5>Ingredients</h5>
-                    <ul>
-                        <li>Cheese</li>
-                        <li>Meat</li>
-                    </ul>
-                </div>
-                <div class="recipe-steps">
-                    <h5>Instructions</h5>
-                    <ol>
-                        <li>do this</li>
-                        <li>next, do this</li>
-                        <li>three</li>
-                        <li>four and</li>
-                        <li>five.</li>
-                    </ol>
-                </div>
-            </div>
-
-            <div class="recipe-container" id="gazpacho">
-                <h3 class="recipe-name">Gazpacho</h3>
-                <div class="recipe-ingredients">
-                    <h5>Ingredients</h5>
-                    <ul>
-                        <li>Salt Cod</li>
-                        <li>Lettuce</li>
-                        <li>Tomato</li>
-                        <li>Mini hamburger buns</li>
-                        <li>Red pepper jelly</li>
-                    </ul>
-                </div>
-                <div class="recipe-steps">
-                    <h5>Instructions</h5>
-                    <ol>
-                        <li>do this</li>
-                        <li>next, do this</li>
-                        <li>three</li>
-                        <li>four and</li>
-                        <li>five.</li>
-                    </ol>
-                </div>
-            </div>
-
-            <div class="recipe-container" id="cod">
-                <h3 class="recipe-name">Mini Cod Sandwiches</h3>
-                <div class="recipe-ingredients">
-                    <h5>Ingredients</h5>
-                    <ul>
-                        <li>Salt cod mixture</li>
-                        <li>Lettuce</li>
-                        <li>Tomato</li>
-                        <li>Mini hamburger buns</li>
-                        <li>Red pepper jelly</li>
-                    </ul>
-                </div>
-                <div class="recipe-steps">
-                    <h5>Instructions</h5>
-                    <ol>
-                        <li>do this</li>
-                        <li>next, do this</li>
-                        <li>three</li>
-                        <li>four and</li>
-                        <li>five.</li>
-                    </ol>
-                </div>
-            </div>
-        </div> 
+        
     </div>
 
 </body>
