adds footer and content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Abby's Apron</title>
   <meta name="description" content="Abby's Apron">
   <meta name="author" content="sambors">
-
+  
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
 
@@ -35,22 +36,33 @@
                 <div class="recipe-ingredients">
                     <h5>Ingredients</h5>
                     <ul>
-                        <li>Cheese</li>
-                        <li>Meat</li>
+                        <p>Meats:</p>
+                        <li>Linguiça - a spiced pork sausage, similar to chorizo</li>
+                        <li>Salchichon - a Spanish salame</li>
+                        <li>Del Duca - a dry-cured ham</li>
+                        <li>Chorizo Cantimpalo</li>
+                        <p>Cheeses:</p>
+                        <li>Cheese A</li>
+                        <li>Cheese B</li>
+                        <p>Accompaniments:</p>
+                        <li>Bread</li>
+                        <li>Red Pepper Jam</li>
+                        <li>Olives - blank and blank green olives</li>
+                        <li>Olive spread</li>
                     </ul>
                 </div>
                 <div class="recipe-steps">
                     <h5>Instructions</h5>
                     <ol>
-                        <li>do this</li>
-                        <li>next, do this</li>
+                        <li>Slice the Linguiça on the bias into quarter-inch slices, and cook on a grill or grill-pan over medium-high heat until nicely browned.</li>
+                        <li>Arrange the meats and cheeses on a platter, and enjoy with fresh bread, red pepper jam, and olive spread</li>
                         <li>three</li>
                         <li>four and</li>
                         <li>five.</li>
                     </ol>
                 </div>
             </div>
-
+            <hr>
             <div class="recipe-container" id="gazpacho">
                 <h3 class="recipe-name">Gazpacho</h3>
                 <div class="recipe-ingredients">
@@ -74,7 +86,7 @@
                     </ol>
                 </div>
             </div>
-
+            <hr>
             <div class="recipe-container" id="cod">
                 <h3 class="recipe-name">Mini Cod Sandwiches</h3>
                 <div class="recipe-ingredients">
@@ -101,5 +113,12 @@
         </div> 
     </div>
 
+    <footer>
+        <div class="footer-container">
+            <p>Abby's Birthday, 2020</p>
+            <p>Site by Szymon</p>
+            <p>Obviously, heavily inspired by <a href="https://www.blueapron.com/">Blue Apron</a></p>
+        </div>
+    </footer>
 </body>
 </html>
