--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="author" content="sambors">
 
   <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="construction.css">
 
 </head>
 
