--- a/index.html
+++ b/index.html
@@ -5,23 +5,48 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
   <title>Abby's Apron</title>
   <meta name="description" content="Abby's Apron">
   <meta name="author" content="sambors">
-
+  
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="construction.css">
+  <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-    <div class="center">
-        <div class="center-box">
-            <img src="logo.png" alt="">
-            <h6 class="subtitle">Launching soon</h6>
+    <header class="header">
+        <div class="header-container">
+            <nav>
+                <img class="logo" src="logo.png" alt="">
+                <ul class="nav-links">
+                    <li><a href="index.html">Theme 2020</a></li>
+                    <li><a href="recipes.html">Recipes</a></li>
+                    <li><a href="meet.html">Party Time!</a></li>
+                </ul>
+            </nav>
         </div>
-        
+    </header>
+
+    <div class="container">
+        <div class="theme-grid">
+            <img src="lisbon.jpg" alt="">
+            <div class="blurb">
+                <p>This year's theme is Portugal (a place we did not travel to in 2020...) First we'll celebrate with bounties from land and sea - a selection of meats, cheeses, and tinned fish served alongside a green olive spread. For our mains, a refreshing gazpacho and a Portuguese take on a Fish Fillet sandwich made from bacalhau (salt cod), of course. And for dessert, the quintessential Portuguese dessert, pasteis de nata. Fun fact about this treat:</p>
+                <blockquote>Before the 18th century, convents and monasteries used large quantities of egg whites for starching clothes, such as friars and nuns' religious habits. It was quite common for monasteries and convents to use the leftover egg yolks to make cakes and pastries, resulting in the proliferation of sweet pastry recipes throughout the country. </blockquote>
+                <p>Thanks for celebrating with us online in these strange times!</p>
+            </div>
+            
+        </div>
     </div>
 
+    <footer>
+        <div class="footer-container">
+            <p>Abby's Birthday, 2020</p>
+            <p>Built by Szymon</p>
+            <p>Obviously, heavily inspired by <a href="https://www.blueapron.com/">Blue Apron</a></p>
+        </div>
+    </footer>
 </body>
-</html>
