--- a/meet.html
+++ b/meet.html
@@ -22,7 +22,7 @@
             <nav>
                 <img class="logo" src="logo.png" alt="">
                 <ul class="nav-links">
-                    <li><a href="#">Theme 2020</a></li>
+                    <li><a href="index.html">Theme 2020</a></li>
                     <li><a href="recipes.html">Recipes</a></li>
                     <li><a href="meet.html">Party Time!</a></li>
                 </ul>
@@ -36,10 +36,9 @@
             <div class="course" id="appetizer">
                 <div class="course-name">Appetizer</div>
                 <ul>
-                    <li>Meat & Cheese Board</li>
+                    <li>Meats & Cheeses</li>
                     <li>Tinned Fish</li>
                     <li>Green Olive Dip<br><span class="recipe-description">patê de azeitonas verdes</span></li>
-                    
                 </ul>
             </div>
             <div class="course" id="main">
@@ -48,6 +47,7 @@
                     <li>Gazpacho with Garnishes<br><span class="recipe-description">gaspacho com guarnições</span>
                     </li>
                     <li>Mini Salt Cod Sandwiches<br><span class="recipe-description">bacalhau "McSilva"</span></li>
+                    <li>To drink: <span class="recipe-description">"Espiral" vinho verde</span></li>
                 </ul>
             </div>
             <div class="course" id="dessert">
@@ -58,8 +58,8 @@
             </div>
             <div class="meeting-details">
                 <p>Meeting time is at 7pm CDT</p>
-                <p>Google Hangout Link: <a href="#">link here</a></p>
-                <p>Spotify listen-along link: <a href="#">link here</a></p>
+                <p>Google Hangout Link: <a href="https://meet.google.com/nku-ybpn-bxr">https://meet.google.com/nku-ybpn-bxr</a></p>
+                <p>Spotify listen-along link: coming soon!</p>
             </div>
             
         </div>
