--- a/recipes.html
+++ b/recipes.html
@@ -21,7 +21,7 @@
             <nav>
                 <img class="logo" src="logo.png" alt="">
                 <ul class="nav-links">
-                    <li><a href="#">Theme 2020</a></li>
+                    <li><a href="index.html">Theme 2020</a></li>
                     <li><a href="recipes.html">Recipes</a></li>
                     <li><a href="meet.html">Party Time!</a></li>
                 </ul>
@@ -33,41 +33,38 @@
         <div class="recipe-grid">
             <div class="sidebar">
                 <p class="sidebar-title">Recipes:</p>
-                <a href="#charcuterie">Meat & Cheese Board</a>
+                <a href="#charcuterie">Charcuterie Board</a>
                 <a href="#gazpacho">Gazpacho</a>
                 <a href="#cod">Mini Salt Cod Sandwiches</a>
-                <a href="#">Recipe</a>
             </div>
 
             <div class="content">
                 <div class="recipe-container" id="charcuterie">
-                    <h3 class="recipe-name">Meat & Cheese Board</h3>
+                    <h3 class="recipe-name">Charcuterie Board</h3>
                     <div class="recipe-ingredients">
                         <h5>Ingredients</h5>
                         <ul>
                             <p>Meats:</p>
-                            <li>Linguiça - a spiced pork sausage, similar to chorizo</li>
                             <li>Salchichon - a Spanish salame</li>
                             <li>Del Duca - a dry-cured ham</li>
                             <li>Chorizo Cantimpalo</li>
+                            <li>Linguiça - a spiced pork sausage, similar to chorizo</li>
+                            <li>Tinned fish</li>
                             <p>Cheeses:</p>
                             <li>Queso Mahón Menorca - a semi-soft cow's milk cheese</li>
                             <li>Zamorano - a hard sheep's milk cheese</li>
                             <p>Accompaniments:</p>
                             <li>Bread</li>
-                            <li>Red Pepper Jam</li>
-                            <li>Olives - blank and blank green olives</li>
-                            <li>Olive spread</li>
+                            <li>Sweet Red Pepper Jam</li>
+                            <li>Olives - Manzanilla and Taberna green olives</li>
+                            <li>Green Olive Dip</li>
                         </ul>
                     </div>
                     <div class="recipe-steps">
                         <h5>Instructions</h5>
                         <ol>
-                            <li>Slice the Linguiça on the bias into quarter-inch slices, and cook on a grill or grill-pan over medium-high heat until nicely browned.</li>
-                            <li>Arrange the meats and cheeses on a platter, and enjoy with fresh bread, red pepper jam, and olive spread</li>
-                            <li>three</li>
-                            <li>four and</li>
-                            <li>five.</li>
+                            <li>Cook the linguiça on a grill or grill-pan over medium-high heat until nicely browned. Slice on the bias to serve.</li>
+                            <li>Arrange the meats and cheeses on a platter, and enjoy with fresh bread, tinned fish, red pepper jam, olives, and olive spread.</li>
                         </ol>
                     </div>
                 </div>
@@ -77,21 +74,17 @@
                     <div class="recipe-ingredients">
                         <h5>Ingredients</h5>
                         <ul>
-                            <li>Salt Cod</li>
-                            <li>Lettuce</li>
-                            <li>Tomato</li>
-                            <li>Mini hamburger buns</li>
-                            <li>Red pepper jelly</li>
+                            <li>Gazpacho</li>
+                            <p>Garnishes:</p>
+                            <li>Frozen tomato juice</li>
+                            <li>Frozen cucumbers</li>
                         </ul>
                     </div>
                     <div class="recipe-steps">
                         <h5>Instructions</h5>
                         <ol>
-                            <li>do this</li>
-                            <li>next, do this</li>
-                            <li>three</li>
-                            <li>four and</li>
-                            <li>five.</li>
+                            <li>Taste and season the gazpacho (likely agressively) with salt and pepper.</li>
+                            <li>Ladle soup into chilled bowls. Garnish with tomato ice cubes and cucumbers.</li>
                         </ol>
                     </div>
                 </div>
@@ -101,21 +94,21 @@
                     <div class="recipe-ingredients">
                         <h5>Ingredients</h5>
                         <ul>
-                            <li>Salt cod mixture</li>
+                            <li>Salt Cod Mixture</li>
                             <li>Lettuce</li>
                             <li>Tomato</li>
                             <li>Mini hamburger buns</li>
-                            <li>Red pepper jelly</li>
+                            <li>Sweet Red Pepper Jam</li>
+                            <li>Relish Mayo</li>
                         </ul>
                     </div>
                     <div class="recipe-steps">
                         <h5>Instructions</h5>
+                        <p>(Makes 4 mini-sandwiches)</p>
                         <ol>
-                            <li>do this</li>
-                            <li>next, do this</li>
-                            <li>three</li>
-                            <li>four and</li>
-                            <li>five.</li>
+                            <li>Heat 2 Tbsps of olive oil in a medium non-stick skillet over medium heat.</li>
+                            <li>Working in batches, drop the cod batter by scant 1/4 cup-fuls into the hot oil and fry until golden brown and cooked through, 2-4 minutes per side. Take a nibble, there should be no floury taste. Transfer to paper towels to drain. Add more oil to the pan as needed.</li>
+                            <li>Spread the bottoms of the buns with relish mayo and layer each with a lettuce leaf, tomato slice, and a patty. Dollop with a bit of the red pepper jam and crown with the top of the bun.</li>
                         </ol>
                     </div>
                 </div>
