--- a/meet.html
+++ b/meet.html
@@ -59,7 +59,7 @@
             <div class="meeting-details">
                 <p>Meeting time is at 7pm CDT</p>
                 <p>Google Hangout Link: <a href="https://meet.google.com/nku-ybpn-bxr">https://meet.google.com/nku-ybpn-bxr</a></p>
-                <p>Spotify listen-along link: coming soon!</p>
+                <p>Spotify listen-along link: <a href="https://www.google.com/url?q=https://open.spotify.com/socialsession/4BZuDXuHGSmxcMJtyIXA2YZi7Lt5WFFL9iKYYeljzlfpjyKjyQVeiu0G4GIVsrzTk0eqW46SerfcgiNZwAbwowDOKONLl98GX1qBS1clTUXg?si%3DJjV7h-AaRP2BTu-nnE3Pqw&sa=D&source=hangouts&ust=1600038911718000&usg=AFQjCNEJ9CjKXEJQ9IGNXwKiN7wP1ox6Qg">click here</a></p>
             </div>
             
         </div>
